--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, intial-scale=1.0">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="estilos/style.css">
 	</head>
 	<body>
 		<main>
