--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, intial-scale=1.0">
-		<title></title>
+		<title>CursoeVideo</title>
 	</head>
 	<body>
 		<main>
