--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
 		<main>
 			<header>
 				<h1>Cursos Grátis</h1>
+				<img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
 			</header>
 			<article>
 				<h2>Curso de HTML5 com CSS3</h2>
-				<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
+				<img class="lado" src="imagens/curso-html-css.png" alt="Curso de HTML">
+				<p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter.</p>
+				<p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
 			</article>
 			<article>
 				<h2>Curso de JavaScript</h2>
-				<p>Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.</p>
+				<img class="lado" src="imagens/curso-javascript.png" alt="Curso de JavaScript">
+				<p>JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML por meio do DOM.</p>
+				<p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
 			</article>
 		</main>
 	</body>
